--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <img src="assist.png" alt="course thumbnail">
             <h3>ASSIST</h3>
             <p>Through a competitively selected poll (175 out of over 1000 students), I was chosen as one of three scholars to represent Vietnam in the USA on a 100% scholarship. It is not wrong to say that "Spending a year in life abroad is like living a whole new life in a year!" Another ASSIST student (she's from Germany) and I made a speech in front of the school to talk about our experiences per the principal's request.</p>
-            <a class="btn" href="https://www.youtube.com/watch?v=tXbD_HMoTPU" target="_blank">View My Speech Here</a>
+            <a class="btn" href="https://www.youtube.com/watch?v=tXbD_HMoTPU" target="_blank">Watch My Speech Out!</a>
           </section>
         </div>
       </section>
