--- a/index.html
+++ b/index.html
@@ -29,16 +29,15 @@
           <section class="project-item">
             <img src="deloitte.png" alt="website thumbnail">
             <h3>Deloitte</h3>
-            <p>Learned all about Human-Centered Design business approach and utilized the concept to develop a medium-fidelity prototype as a solution to my 6-people team assigned problem: How might we help employees to better separate their personal and professional lives; We also learned how to effectively pitch the idea to our managers!</p>
+            <p>Learned all about Human-Centered Design business approach and utilized the concept to develop a medium-fidelity prototype as a solution to my 6-people team assigned problem: How might we help employees to better separate their personal and professional lives; We also learned how to effectively pitch the idea to our managers! Watch the moment of truth <a href="https://youtu.be/vcEh-UKYB3I" target="_blank">HERE</a>!</p>
             <a class="btn" href="https://miro.com/app/board/uXjVOF8B7gY=/?share_link_id=987595831582" target="_blank"> Our Prototype</a>
-            <a class="btn" href="https://youtu.be/vcEh-UKYB3I">Our Finale Pitch!</a>
           </section>
 
           <!-- Project 2 -->
           <section class="project-item">
             <img src="kidocode.png" alt="website thumbnail">
             <h3>KidoCode</h3>
-            <p>Had the perfect chance to learn about the subtle yet very important relationship between the world of finance (specifically cryptocurrency) and the technology behind the scene. I had the exposure to a wide range of libraries from crypto-related ones such as Python-binance to data-analyzing's like Pandas. You can view most of the libraries <a href="https://colab.research.google.com/drive/18xjmiqgsDh69_8eUra0GQiLSEorWrWjR?usp=sharing" target="_blank">HERE</a>. At the end of the internship, I managed to build my own cryptocurrency!</p>
+            <p>Had the perfect chance to learn about the subtle yet very important relationship between the world of finance (specifically cryptocurrency) and the technology behind the scene. I had the exposure to a wide range of libraries from crypto-related ones such as Python-binance to data-analyzing's like Pandas. You can view most of the libraries I used <a href="https://colab.research.google.com/drive/18xjmiqgsDh69_8eUra0GQiLSEorWrWjR?usp=sharing" target="_blank">HERE</a>. At the end of the internship, I managed to build my own cryptocurrency!</p>
             <a class="btn" href="https://colab.research.google.com/drive/1wCyqkd0lQO9gIYA8HzNqm_AvpCt6hi1N?usp=sharing" target="_blank">My Crypto Codes (it runs!)</a>
           </section>
 
