--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <section class="project-item">
             <img src="deloitte.png" alt="website thumbnail">
             <h3>Deloitte</h3>
-            <p>Learned all about Human-Centered Design business approach and utilized the concept to develop a medium-fidelity prototype as a solution to my 6-people team assigned problem: How might we help employees to better separate their personal and professional lives; We also learned how to effectively pitch the idea to our managers! Watch the moment of truth <a href="https://youtu.be/vcEh-UKYB3I" target="_blank">HERE</a>!</p>
+            <p>Learned all about Human-Centered Design business approach and utilized the concept to develop a medium-fidelity prototype as a solution to my 6-people team assigned problem: How might we help employees to better separate their personal and professional lives; We also learned how to effectively pitch the idea to our managers! /*Watch the moment of truth <a href="https://youtu.be/vcEh-UKYB3I" target="_blank">HERE</a>!*/</p>
             <a class="btn" href="https://miro.com/app/board/uXjVOF8B7gY=/?share_link_id=987595831582" target="_blank"> Our Prototype</a>
           </section>
 
