--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <section>
             <h3>Saigon South International School - HCMC, Vietnam</h3>
             <p>Enrolled: August 2019 - May 2020</p>
-            <li>Scored a 5 in AP Microeconomics, a 4 in AP Macroeconomics and another 4 in AP Calculus BC.</li>
+            <li>Scored a 5 in AP Macroeconomics, a 4 in AP Microeconomics and another 4 in AP Calculus BC.</li>
             <li>School's robotic team qualified for the 2020 FIRST Robotic Challenge hosted in Honolulu (later</li>
             <p>sadly cancelled due to COVID-19).</p>
           </section>
