--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <h2>Co-Op Intern</h2>
 
           <p>I am a highly-motivated and goal-oriented "Computational Mathematic" major student at University of Waterloo who is looking for an intersection between his two most excellent realms: Technology & Finance.</p>
+          <p>P/S: This website is handmade, so yes, I do know a thing or two about front-end developing!</p> 
         </div>
       </header>
 
